wicket running on docker

--- a/untitled/src/main/java/org/project/wicket/SignIn.html
+++ b/untitled/src/main/java/org/project/wicket/SignIn.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <head>
-    <title>Wicket Examples - signin</title>
+    <title>Wicket App - signin</title>
 </head>
 <body>
 
     <span wicket:id = "feedback"/>
-    <p>
-        <i>Username and password are both "wicket"</i>
-    </p>
 
     <form wicket:id="signInForm">
         <dl>
