--- a/untitled/src/main/java/org/project/wicket/SignOut.html
+++ b/untitled/src/main/java/org/project/wicket/SignOut.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <head>
-    <title>Wicket Examples - signin2</title>
+    <title>Wicket App - SignOut</title>
 </head>
 <body>
     <h2>Goodbye!</h2>
