--- a/untitled/src/main/java/org/project/wicket/Home.html
+++ b/untitled/src/main/java/org/project/wicket/Home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <head>
-  <title>Wicket Examples - signin</title>
+  <title>Wicket App - Home</title>
 </head>
 <body>
 
